test/libsolidity/natspecJSON/dev_documenting_no_param_description.sol
contract test {
    /// @dev Multiplies a number by 7 and adds second parameter
    /// @param a Documentation for the first parameter
    /// @param second
    function mul(uint a, uint second) public returns (uint d) { return a * 7 + second; }
}

// ----
// DocstringParsingError 9942: (20-156): No description given for param second
